<resources>
    <string name="app_name">Smart Police</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="signup">Sign Up</string>
    <string name="cd">content desc</string>
    <string name="LOGIN">LOGIN</string>
    <string name="submit">Submit</string>
    <string name="name">name</string>
    <string name="Name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin"><u>SignIn</u></string>
    <string name="gender">Gender :</string>
    <string name="Signup">SignUp</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_enter_the_otp_sent_to_your_phone_number">Please Enter the OTP sent to your phone number</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="disclaimer">Enter all details as per Aadhaar card</string>
</resources>
