<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity">

    <ImageView
        android:id="@+id/signupimage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_undraw_fingerprint_swrc"
        app:layout_constraintBottom_toTopOf="@+id/card_signup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true"
        app:contentPaddingBottom="10dp"
        app:contentPaddingTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupimage">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/overpass_semibold"
                android:text="@string/Signup"
                android:textSize="25sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayoutSignUp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/overpass_semibold"
                    android:hint="@string/Name" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/gendertitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameLayoutSignUp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/overpass_semibold"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/gender"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameLayoutSignUp"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@+id/gendertitle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayoutSignUp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gender"
                android:layout_marginTop="7dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userEmailSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/overpass_semibold"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailLayoutSignUp"
                android:layout_marginTop="7dp"
                app:counterEnabled="true"
                app:counterMaxLength="10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/overpass_semibold"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneNumberLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/overpass_semibold"
                android:text="@string/submit"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/already"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/submit"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/overpass_semibold"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/already"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/overpass_semibold"
                android:text="@string/signin"
                android:textColor="#000000" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>