<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_undraw_fingerprint_swrc"
                android:id="@+id/topimage"
                android:contentDescription="@string/app_name" />
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                app:cardCornerRadius="15dp"
                android:id="@+id/card"
                android:layout_below="@+id/topimage"
                app:cardUseCompatPadding="true"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/usernamelayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/username"
                            android:fontFamily="@font/overpass_semibold"
                            android:hint="@string/username" >
                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/passwordlayout"
                        android:layout_below="@+id/usernamelayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/password"
                            android:fontFamily="@font/overpass_semibold"
                            android:hint="@string/password" >
                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/button_login"
               android:foregroundGravity="center"
               android:text="@string/login"
               android:layout_below="@+id/card"
               android:layout_marginTop="8dp"
               android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/or"
                android:text="@string/or"
                android:fontFamily="@font/overpass_semibold"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/button_login"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_signup"
                android:foregroundGravity="center"
                android:text="@string/signup"
                android:layout_below="@+id/or"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>